--- a/Cgps/WebContent/main/index.html
+++ b/Cgps/WebContent/main/index.html
@@ -49,7 +49,7 @@
                 <!--Site Logo-->
                 <div class="logo">
                     <a href="index.html">
-                        <img alt="Volvox" src="img/logo.png" data-logo-height="35">
+                        <img alt="Volvox" src="img/logo2.png" data-logo-height="35">
                     </a>
                 </div>
                 <!--End Site Logo-->
